[package]
name = "activity-manager"
version = "0.1.1"
edition = "2024"
authors = ["Paul Zhang"]
description = "A UI-agnostic, Android-style activity and routing stack manager for Rust. / 一个无 UI 框架依赖的通用 Android 风格页面与路由堆栈管理框架。"
repository = "https://github.com/paulzhang5511/activity-manager"
homepage = "https://github.com/paulzhang5511/activity-manager"
documentation = "https://docs.rs/activity-manager"
readme = "README.md"
license = "MIT"
keywords = ["gui", "router", "activity", "navigation", "ui-framework"]
categories = ["gui"]

[dependencies]
log = "0.4"

[dev-dependencies]
iced = "0.14.0"
log = "0.4"
env_logger = "0.11"

[[example]]
name = "iced_demo"
path = "examples/iced_demo.rs"
